--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
     testCompile group: 'org.springframework', name: 'spring-test', version: '5.2.2.RELEASE'
-    testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 }
