--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-context', version: '5.2.2.RELEASE'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.2'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
