Refacor and modify some parsing options

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ yelp_url=https://www.yelp.com
 
 mongo.database=yelp
 mongo.collection=yelpcollection
-mongo.user=vhalaveika
-mongo.password=123
-mongo.host=localhost
-mongo.port=27017
+mongo.user=${MONGO_USER}
+mongo.password=${MONGO_PASSWORD}
+mongo.host=${MONGO_HOST}
+mongo.port=${MONGO_PORT}
