--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-yelp_url=https://www.yelp.com
+yelp_url=${YELP_URL}
 
-mongo.database=yelp
-mongo.collection=yelpcollection
+mongo.database=${MONGO_DATABASE}
+mongo.collection=${MONGO_COLLECTION}
 mongo.user=${MONGO_USER}
 mongo.password=${MONGO_PASSWORD}
 mongo.host=${MONGO_HOST}
